--- a/src/main/resources/assets/createillicititems/lang/en_us.json
+++ b/src/main/resources/assets/createillicititems/lang/en_us.json
@@ -37,6 +37,7 @@
   "item.createillicititems.powdered_chalk": "Powdered Chalk",
 
   "item.createillicititems.cannabis_leaf": "Cannabis Leaf",
+  "item.createillicititems.cannabis_seeds": "Cannabis Seeds",
 
   "block.createillicititems.fermenting_barrel": "Fermenting Barrel",
   "block.createillicititems.dried_cane_juice_block": "Dried Cane Juice Block",
